--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "directus-sdk-javascript",
   "version": "2.14.0",
-  "description": "WIP - Directus SDK for JavaScript (Node and Browser)",
-  "main": "index.js",
+  "description": "Directus SDK for JavaScript (Node and Browser)",
+  "main": "dist/remote.cjs.js",
+  "module": "dist/remote.esm.js",
+  "browser": "dist/remote.umd.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "webpack"
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
@@ -30,11 +35,11 @@
     "qs": "^6.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.36",
-    "@babel/preset-env": "^7.0.0-beta.36",
-    "babel-loader": "^8.0.0-beta.0",
-    "uglifyjs-webpack-plugin": "^1.1.6",
-    "webpack": "^3.10.0",
+    "rollup": "^0.66.2",
+    "rollup-plugin-buble": "^0.19.2",
+    "rollup-plugin-commonjs": "^9.1.8",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-terser": "^3.0.0",
     "xo": "^0.22.0"
   },
   "xo": {
