--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "directus-sdk-javascript",
-  "version": "2.15.0",
+  "name": "@directus/sdk-js",
+  "version": "3.8.0",
   "description": "Directus SDK for JavaScript (Node and Browser)",
   "main": "dist/remote.cjs.js",
-  "typings": "remote.d.ts",
   "module": "dist/remote.esm.js",
   "browser": "dist/remote.umd.js",
   "files": [
     "dist"
   ],
   "scripts": {
+    "lint": "eslint .",
+    "test": "mocha --exit --recursive",
+    "coverage": "nyc npm run test",
     "build": "rollup -c"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/directus/directus-sdk-javascript.git"
-  },
+  "repository": "directus/directus-sdk-javascript.git",
   "keywords": [
     "node",
+    "javascript",
     "directus",
     "headless",
     "cms",
@@ -32,18 +32,29 @@
   },
   "homepage": "https://github.com/directus/directus-sdk-javascript#readme",
   "dependencies": {
+    "argument-validator": "^0.1.0",
     "axios": "^0.18.0",
-    "qs": "^6.5.2"
+    "base-64": "^0.1.0",
+    "qs": "^6.5.1"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-datetime": "^1.5.0",
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "jsonwebtoken": "^8.2.0",
+    "mocha": "^5.0.4",
+    "nyc": "^11.5.0",
     "rollup": "^0.66.2",
     "rollup-plugin-buble": "^0.19.2",
     "rollup-plugin-commonjs": "^9.1.8",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-terser": "^3.0.0",
-    "xo": "^0.22.0"
-  },
-  "xo": {
-    "space": true
+    "sinon": "^4.4.2",
+    "sinon-chai": "^2.14.0"
   }
 }
