--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "@directus/sdk-js",
-  "version": "3.8.0",
+  "version": "4.0.0-rc.1",
   "description": "Directus SDK for JavaScript (Node and Browser)",
-  "main": "dist/remote.cjs.js",
-  "module": "dist/remote.esm.js",
-  "browser": "dist/remote.umd.js",
+  "main": "dist/directus-sdk.js",
+  "browser": "dist/directus-sdk.min.js",
   "files": [
     "dist"
   ],
   "scripts": {
-    "lint": "eslint .",
+    "fix": "prettier --write src/*.js",
     "test": "mocha --exit --recursive",
-    "coverage": "nyc npm run test",
-    "build": "rollup -c"
+    "build": "webpack",
+    "dev": "webpack --progress --colors --watch"
   },
-  "repository": "directus/directus-sdk-javascript.git",
+  "repository": "directus/sdk-js",
   "keywords": [
     "node",
     "javascript",
@@ -30,7 +29,7 @@
   "bugs": {
     "url": "https://github.com/directus/directus-sdk-javascript/issues"
   },
-  "homepage": "https://directus.io",
+  "homepage": "https://docs.directus.io/sdk/js.html",
   "dependencies": {
     "argument-validator": "^0.1.0",
     "axios": "^0.18.0",
@@ -38,23 +37,21 @@
     "qs": "^6.5.1"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-add-module-exports": "^1.0.0",
+    "chai": "^4.2.0",
     "chai-datetime": "^1.5.0",
-    "eslint": "^4.18.2",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.9.0",
-    "jsonwebtoken": "^8.2.0",
-    "mocha": "^5.0.4",
-    "nyc": "^11.5.0",
-    "rollup": "^0.66.2",
-    "rollup-plugin-buble": "^0.19.2",
-    "rollup-plugin-commonjs": "^9.1.8",
-    "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.4.0",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-terser": "^3.0.0",
-    "sinon": "^4.4.2",
-    "sinon-chai": "^2.14.0"
+    "jsonwebtoken": "^8.4.0",
+    "mocha": "^5.2.0",
+    "nyc": "^13.1.0",
+    "prettier": "^1.15.3",
+    "sinon": "^7.1.1",
+    "sinon-chai": "^3.3.0",
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-node-externals": "^1.7.2"
   }
 }
