--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@directus/sdk-js",
-  "version": "4.0.0-rc.1",
+  "version": "4.0.0",
   "description": "Directus SDK for JavaScript (Node and Browser)",
   "main": "dist/directus-sdk.js",
-  "browser": "dist/directus-sdk.min.js",
+  "browser": "dist/directus-sdk.umd.min.js",
   "files": [
     "dist"
   ],
