--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@directus/sdk-js",
-  "version": "5.0.0",
+  "version": "5.1.0-rc.1",
   "description": "Directus SDK for JavaScript (Node and Browser)",
   "main": "dist/directus-sdk.js",
   "browser": "dist/directus-sdk.umd.min.js",
