--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,19 @@
 {
   "compilerOptions": {
-    "lib": [
-      "es6",
-      "dom"
-    ],
+    "lib": ["es6", "dom"],
     "outDir": "./dist/",
     "module": "commonjs",
     "target": "es6",
-    "allowJs": true,
+    "allowJs": false,
     "strict": true,
     "sourceMap": true,
     "resolveJsonModule": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
-    "noImplicitReturns": true
+    "noImplicitReturns": true,
+    "declaration": true,
+    "emitDeclarationOnly": true
   },
   "compileOnSave": true,
-  "include": [
-    "./src/**/*"
-  ]
+  "include": ["./src/**/*"]
 }
