--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Directus SDK for JavaScript (Node and Browser)",
   "main": "dist/directus-sdk.js",
   "browser": "dist/directus-sdk.umd.min.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/directus-sdk.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
     "fix": "prettier --write src/*.js",
     "test": "mocha --exit --recursive",
-    "build": "webpack && tsc",
+    "build": "webpack",
     "dev": "webpack --progress --colors --watch"
   },
   "repository": "directus/sdk-js",
@@ -32,10 +32,6 @@
   },
   "homepage": "https://docs.directus.io/sdk/js.html",
   "dependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/base-64": "^0.1.2",
-    "@types/node": "^10.12.18",
-    "@types/qs": "^6.5.1",
     "argument-validator": "^0.1.0",
     "axios": "^0.18.0",
     "base-64": "^0.1.0",
@@ -56,8 +52,6 @@
     "prettier": "^1.15.3",
     "sinon": "^7.1.1",
     "sinon-chai": "^3.3.0",
-    "ts-loader": "^5.3.3",
-    "typescript": "^3.2.2",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-node-externals": "^1.7.2"
